--- a/package.json
+++ b/package.json
@@ -4,9 +4,23 @@
     "description": "Mi aplicación Node.js",
     "main": "index.js",
     "scripts": {
-      "start": "node index.js"
+        "start": "node index.js",
+        "test": "jest"
     },
     "dependencies": {
-      "express": "^4.18.2"
-    }
-  }
+        "express": "^4.21.2",
+        "jest": "^30.0.4",
+        "supertest": "^7.1.3"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/JennyfferA/practica-despliegue.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/JennyfferA/practica-despliegue/issues"
+    },
+    "homepage": "https://github.com/JennyfferA/practica-despliegue#readme"
+}
